--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "stripe": "^8.191.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
